--- a/public/css/hero-fix.css
+++ b/public/css/hero-fix.css
@@ -1,3 +1,1 @@
-.hero {
-  background-image: url('/images/hero_image.webp') !important;
-}
+.hero { background-image: url("/images/hero_image.webp") !important; background-repeat: no-repeat !important; background-position: center center !important; background-size: cover !important; }
